# rox

./: Cargo.toml  QWEN.md  README.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/agent/: context.rs  core.rs  llm.rs  mod.rs  session.rs
src/tools/: executor.rs  mod.rs  registry.rs
src/tools/builtins/: fs.rs  get_time.rs  mod.rs  web.rs
src/types/: function.rs  mod.rs  ollama.rs
