[package]
name = "brk"
version = "0.1.0"
edition = "2021"

[lib]
name = "brk"
path = "src/lib.rs"

[[bin]]
name = "brk"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
toml = "0.8"
reedline = "0.38"
